# optimal-execution

./: .gitignore  README.md  backtest.ipynb  backtest.py  backtest_ye_adjusted.py  base_strategy.py  grid_search.py  lob_plot.py  pratvi_strategy.py  pyproject.toml  research.py  strategy.py  ye_adjusted.py  ye_strategy.py  zijie_strategy.py
eda/: alpha_relevance.ipynb
