[project]
name = "optimal_execution"
version = "0.1.0"
description = "ORIE 5259 Final Project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
]
